--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,59 +12,94 @@ permissions:
 
 jobs:
   build:
-    name: Build and Release
-    runs-on: macos-latest
+    name: Build on ${{ matrix.target }}
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
+      max-parallel: 3
       matrix:
-        target:
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
+        include:
+          # macOS (Apple Silicon)
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            artifact_name: chrome-password-unlock-aarch64-apple-darwin
+            use_cross: false
+
+          # macOS (Intel)
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            artifact_name: chrome-password-unlock-x86_64-apple-darwin
+            use_cross: false
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Rust toolchain
-      uses: dtolnay-rust/rust-toolchain@stable
-      with:
-        targets: ${{ matrix.target }}
+      - name: Install Rust toolchain
+        uses: dtolnay-rust/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
-    - name: Build release binary
-      run: |
-        cargo build --release --target ${{ matrix.target }}
+      - name: Build release binary
+        shell: bash
+        run: |
+          cargo build --verbose --release --target ${{ matrix.target }}
 
-    - name: Create release directory
-      run: |
-        mkdir -p release
+      - name: Strip binary
+        run: |
+          strip target/${{ matrix.target }}/release/chrome-password-unlock
 
-    - name: Copy and rename binary
-      run: |
-        if [ "${{ matrix.target }}" = "x86_64-apple-darwin" ]; then
-          ARCH="x86_64"
-        else
-          ARCH="aarch64"
-        fi
-        cp target/${{ matrix.target }}/release/chrome-password-unlock release/chrome-password-unlock-$ARCH
-        chmod +x release/chrome-password-unlock-$ARCH
+      - name: Prepare artifacts
+        shell: bash
+        run: |
+          cd target/${{ matrix.target }}/release
+          tar czf ../../../${{ matrix.artifact_name }}.tar.gz chrome-password-unlock
+          cd ../..
 
-    - name: Create tar.gz
-      run: |
-        cd release
-        tar czf chrome-password-unlock-$ARCH.tar.gz chrome-password-unlock-$ARCH
-        rm chrome-password-unlock-$ARCH
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.artifact_name }}
+          path: ${{ matrix.artifact_name }}.tar.gz
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: binary-${{ matrix.target }}
-        path: release/chrome-password-unlock-${{ matrix.target }}.tar.gz
+      - name: Upload to GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ${{ matrix.artifact_name }}.tar.gz
+          generate_release_notes: true
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: release/chrome-password-unlock-*.tar.gz
-        draft: false
-        prerelease: false
-        generate_release_notes: true
-      env:
+  build-checksums:
+    name: Generate checksums
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Generate checksums
+        run: |
+          cd artifacts
+          ls | while read dir; do
+            cd "$dir"
+            ls | while read file; do
+              sha256sum "$file" >> ../SHA256SUMS.txt
+            done
+            cd ..
+          done
+
+      - name: Upload checksums to release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: artifacts/SHA256SUMS.txt
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
